--- a/_example/templates/components/nav.html
+++ b/_example/templates/components/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light rounded mb-3">
-    <a class="navbar-brand" href="#">THTML</a>
+    <a class="navbar-brand" href="/">THTML</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,20 +7,19 @@
     <div class="collapse navbar-collapse" id="main-menu">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/page.html">Link</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
+                    Info
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-item">
+                        This nav bar is rendered from <em>templates/components/nav.html</em>
+                    </div>
                 </div>
             </li>
         </ul>
