--- a/_example/templates/layouts/default.html
+++ b/_example/templates/layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/main.min.css">
 
         {{ block "layout-head" . }}{{ end }}
     </head>
@@ -26,7 +26,7 @@
             {{ block "layout-content" . }}{{ end }}
         </div>
 
-        <script src="/js/main.js"></script>
+        <script src="/js/main.min.js"></script>
 
         {{ block "layout-script" . }}{{ end }}
     </body>
