--- a/_example/templates/components/nav.html
+++ b/_example/templates/components/nav.html
@@ -18,7 +18,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <div class="dropdown-item">
-                        This nav bar is rendered from <em>templates/components/nav.html</em>
+                        Edit <code>templates/components/nav.html</code> to change this menu
                     </div>
                 </div>
             </li>
