--- a/_example/templates/components/head.html
+++ b/_example/templates/components/head.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="/css/bootstrap.min.css?_={{ id }}">
+        <link rel="stylesheet" href="/css/bootstrap.min.css?_={{ ID }}">
 
         {{ block "layout-head" . }}{{ end }}
     </head>
